--- a/.gitignore
+++ b/.gitignore
@@ -75,30 +75,34 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
-.next
 
-# Nuxt.js build / generate output
-.nuxt
-dist
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and *not* Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# vuepress build output
-.vuepress/dist
+# testing
+/coverage
 
-# Serverless directories
-.serverless/
+# next.js
+/.next/
+/out/
 
-# FuseBox cache
-.fusebox/
+# production
+/build
 
-# DynamoDB Local files
-.dynamodb/
+# misc
+.DS_Store
+*.pem
 
-# TernJS port file
-.tern-port
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
